--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -35,6 +35,13 @@
     <!-- If this is true, the screen will come on when you unplug usb/power/whatever. -->
     <bool name="config_unplugTurnsOnScreen">true</bool>
 
+    <!-- Component name of the service providing network location support. -->
+    <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string>
+
+    <!-- Component name of the service providing geocoder API support. -->
+    <string name="config_geocodeProvider">com.google.android.location.GeocodeProvider</string>
+
+
     <!-- Array of light sensor LUX values to define our levels for auto backlight brightness support.
          The N entries of this array define N + 1 zones as follows: 
 
@@ -84,42 +91,6 @@
     <!-- Flag indicating whether the we should enable the automatic brightness in Settings. -->
     <bool name="config_automatic_brightness_available">false</bool>
 
-<<<<<<< HEAD
- <integer-array name="config_longPressVibePattern">
-        <item>0</item>
-        <item>50</item>
-    </integer-array>
-    <integer-array name="config_virtualKeyVibePattern">
-        <item>0</item>
-        <item>50</item>
-    </integer-array>
-    <integer-array name="config_keyboardTapVibePattern">
-        <item>0</item>
-        <item>50</item>
-    </integer-array>
-    <integer-array name="config_safeModeDisabledVibePattern">
-        <item>0</item>
-        <item>1</item>
-        <item>20</item>
-        <item>21</item>
-    </integer-array>
-    <integer-array name="config_safeModeEnabledVibePattern">
-        <item>0</item>
-        <item>1</item>
-        <item>20</item>
-        <item>21</item>
-        <item>500</item>
-        <item>600</item>
-    </integer-array>
-    <integer-array name="config_scrollBarrierVibePattern">
-        <item>0</item>
-        <item>15</item>
-        <item>10</item>
-        <item>10</item>
-    </integer-array>
-
-=======
->>>>>>> Made some updates
 <!-- Array of light sensor LUX values to define our levels for auto backlight brightness support.
          The N entries of this array define N + 1 zones as follows:
 
@@ -141,10 +112,6 @@
         <item>1300</item>
         <item>1920</item>
         <item>3000</item>
-<<<<<<< HEAD
-        <item>20000</item>
-=======
->>>>>>> Made some updates
     </integer-array>
 
     <!-- Array of output values for LCD backlight corresponding to the LUX values
@@ -163,7 +130,6 @@
         <item>210</item>
         <item>222</item>
         <item>255</item>
-        <item>86</item>
     </integer-array>
 
     <!-- Array of output values for button backlight corresponding to the LUX values
@@ -182,33 +148,6 @@
         <item>255</item>
         <item>255</item>
         <item>255</item>
-<<<<<<< HEAD
-        <item>255</item>
-=======
->>>>>>> Made some updates
-    </integer-array>
-
-    <!-- Array of output values for keyboard backlight corresponding to the LUX values
-         in the config_autoBrightnessLevels array.  This array should have size one greater
-         than the size of the config_autoBrightnessLevels array.
-         Crespo has no keyboard so all values are zero.
-    -->
-    <integer-array name="config_autoBrightnessKeyboardBacklightValues">
-        <item>0</item>
-        <item>0</item>
-        <item>0</item>
-        <item>0</item>
-        <item>0</item>
-        <item>0</item>
-        <item>0</item>
-        <item>0</item>
-        <item>0</item>
-        <item>0</item>
-        <item>0</item>
-<<<<<<< HEAD
-        <item>0</item>
-=======
->>>>>>> Made some updates
     </integer-array>
 
     <!-- Minimum screen brightness allowed by the power manager. -->
